# docs/swagger.yaml
@@ -191,6 +191,28 @@ definitions:
         description: In bits
         type: integer
     type: object
+  Dto.Tag:
+    properties:
+      is_manifest_list:
+        type: boolean
+      last_modified:
+        type: string
+      manifest_digest:
+        type: string
+      name:
+        type: string
+      reversion:
+        type: boolean
+      size:
+        description: In bits
+        type: integer
+      start_ts:
+        type: string
+      vulnerabilities:
+        allOf:
+        - $ref: '#/definitions/Dto.Vulnerabilities'
+        description: Additional fields for vulnerability information
+    type: object
   Dto.Team:
     properties:
       avatar:
@@ -332,6 +354,19 @@ definitions:
         type: boolean
       public:
         type: boolean
+    type: object
+  Dto.Vulnerabilities:
+    properties:
+      critical:
+        type: integer
+      high:
+        type: integer
+      low:
+        type: integer
+      medium:
+        type: integer
+      unspecified:
+        type: integer
     type: object
   Errors.ErrorDetails:
     properties:
@@ -1397,6 +1432,43 @@ paths:
       summary: Update user repository permission
       tags:
       - Permission
+  /api/v1/repository/{repository}/tag:
+    get:
+      description: List tags on a repository
+      parameters:
+      - description: Repository name in the format namespace/repository
+        in: path
+        name: repository
+        required: true
+        type: string
+      - description: Include vulnerability information
+        in: query
+        name: include_vulnerabilities
+        type: boolean
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/Dto.Tag'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Errors.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Errors.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Errors.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: List tags on a repository
+      tags:
+      - Tag
   /api/v1/users/me:
     get:
       description: Get the current authenticated user information
